# prompt-extractor

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly-api-uk.yaml  fly-claude-uk.yaml  fly-claude-us.yaml  fly-google-uk.toml  fly-gpt-uk.yaml  fly-perplexity-uk.yaml  fly-uk.yaml  fly.us.toml  fly.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  slack-app-manifest.json
.claude-profile/: Local State  RunningChromeVersion  SingletonCookie  SingletonLock  SingletonSocket  first_party_sets.db
.perplexity-profile/: DevToolsActivePort  Local State  RunningChromeVersion  SingletonCookie  SingletonLock  SingletonSocket  first_party_sets.db
automated_extraction/: __init__.py  api_client.py  chatgpt_runner.py  claude_runner.py  cli.py  config.py  entity_output_processor.py  extraction.py  fly_scaler.py  google_ai_mode_runner.py  google_ai_overview_runner.py  google_chrome_factory.py  google_suggestions_runner.py  llm_api_runner.py  notifications.py  perplexity_runner.py  product_output_processor.py  profile_manager.py  prompt_output_processor.py  supabase_prompt_outputs.py  workflow_trigger.py
docker/: entrypoint.sh  nginx.conf.template  novnc-redirect.html
docs/: CHATGPT_EXTRACTION_IMPROVEMENTS.md  CHROME_PROFILE_STORAGE.md  DISPATCH_MONITOR_IMPROVEMENTS.md  DISPATCH_SKILL.md  GOOGLE_AI_OVERVIEW_IMPROVEMENTS.md  GPT_WORKERS.md  IMPROVEMENTS.md  MULTI_REGION.md  PREFECT.md  ROADMAP.md  SCALING.md  api-extraction.md  claude-scraper.md  gpt-extractor-uk.md  perplexity-scraper.md
examples/: body_example.html  product_flyout_example.html  souces_dialog_html.html
migrations/: 001_chatgpt_profiles.sql  002_chatgpt_profiles_cooldown.sql  002_extraction_accounts.sql  003_profile_quality_aware_claiming.sql  004_load_balanced_claiming.sql
scripts/: apply_machine_envs.sh  batch_status.sh  create_uk_machines.sh  debug_perplexity_dom.py  dispatch_api_loop.py  (+8 more)
(+3464 files in other folders)
