[project]
name = "prompt-extractor"
version = "0.1.0"
description = "Browser-based ChatGPT prompt extraction with Prefect orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "selenium>=4.23.0,<5",
    "undetected-chromedriver>=3.5.5",
    "selenium-stealth>=1.0.6",
    "selenium-wire>=5.1.0",
    "blinker==1.7.0",
    "pyperclip>=1.9.0",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "setuptools>=82.0.0",
    "prefect>=3.6.19",
    "importlib_metadata>=6.0.0",
    "httpx>=0.28.1",
    "supabase>=2.10.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.setuptools.packages.find]
include = ["automated_extraction*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used — fine in tests
